# news_agent

./: README.md  news.json  pyproject.toml
src/news_agent/: crew.py  main.py
src/news_agent/config/: agents.yaml  tasks.yaml
