[project]
name = "news_agent"
version = "0.1.0"
description = "news_agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.12.2"
]

[project.scripts]
news_agent = "news_agent.main:run"
run_crew = "news_agent.main:run"
train = "news_agent.main:train"
replay = "news_agent.main:replay"
test = "news_agent.main:test"
run_with_trigger = "news_agent.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
